2010-01-26  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        Add methods to support running a nested modal loop outside of WebKit.
        https://bugs.webkit.org/show_bug.cgi?id=34199

        * public/WebView.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebView::willEnterModalLoop): Create PageGroupLoadDeferrer
        (WebKit::WebView::didExitModalLoop): Destroy PageGroupLoadDeferrer

2010-01-27  Darin Fisher  <darin@chromium.org>

        Reviewed by Dimitri Glazkov.

        Adding missing WebMutationEvent.cpp file to fix build bustage. 
        https://bugs.webkit.org/show_bug.cgi?id=33882

        * public/WebMutationEvent.h: Remove unnecessary constructor.
        * src/WebEvent.cpp: Remove unnecessary include of WebMutationEvent.h.
        * src/WebMutationEvent.cpp: Added.

2010-01-27  Jay Campan  <jcampan@google.com>

        Reviewed by Darin Fisher.

        Adding EventListeners to the chromium API.

        https://bugs.webkit.org/show_bug.cgi?id=33882

        * WebKit.gyp:
        * public/WebEvent.h: Added.
        * public/WebEventListener.h: Added.
        * public/WebMutationEvent.h: Added.
        * public/WebNode.h:
        * public/WebString.h:
        (WebKit::operator==):
        (WebKit::operator!=):
        * src/EventListenerWrapper.cpp: Added.
        * src/EventListenerWrapper.h: Added.
        * src/WebEvent.cpp: Added.
        * src/WebEventListener.cpp: Added.
        * src/WebEventListenerPrivate.cpp: Added.
        * src/WebEventListenerPrivate.h: Added.
        * src/WebNode.cpp:
        (WebKit::WebNode::addEventListener):
        (WebKit::WebNode::removeEventListener):
        * src/WebString.cpp:
        (WebKit::WebString::equals):

2010-01-26  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Darin Fisher.

        Add KeyboardTest to WebKit API tests
        https://bugs.webkit.org/show_bug.cgi?id=34178

        * WebKit.gyp:
        * tests/KeyboardTest.cpp: Added.
